implemented sonarlint recommendations